--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+bin
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
+/conanbuildinfo.cmake
+/conanbuildinfo.txt
+/conaninfo.txt
